Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4442

Failure on test suite replay-vbr test_7g: Test 7g.3 failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.6.0, Lustre 2.5.1
    • Lustre 2.1.6, Lustre 2.6.0, Lustre 2.5.1, Lustre 2.4.3
    • client and server: lustre-master build 1823 RHEL6 ldiskfs
    • 3
    • 12186

      This issue was created by maloo for sarah <sarah@whamcloud.com>

      This issue relates to the following test suite run: http://maloo.whamcloud.com/test_sets/930d9194-74df-11e3-96b0-52540035b04c.

      The sub-test test_7g failed with the following error:

      Test 7g.3 failed

      test log shows:

      CMD: client-31vm7 /usr/sbin/lctl list_param osp.*osc*.old_sync_processed 2> /dev/null
      osp.lustre-OST0000-osc-MDT0000.old_sync_processed
      osp.lustre-OST0001-osc-MDT0000.old_sync_processed
      osp.lustre-OST0002-osc-MDT0000.old_sync_processed
      osp.lustre-OST0003-osc-MDT0000.old_sync_processed
      osp.lustre-OST0004-osc-MDT0000.old_sync_processed
      osp.lustre-OST0005-osc-MDT0000.old_sync_processed
      osp.lustre-OST0006-osc-MDT0000.old_sync_processed
      wait mds1 secs maximumly for client-31vm7 mds-ost sync done.
      /usr/lib64/lustre/tests/test-framework.sh: line 2135: [: mds1: integer expression expected
      CMD: client-31vm7 /usr/sbin/lctl get_param -n osp.*osc*.old_sync_processed
      1
      1
      1
      1
      1
      1
      1
       recovery node iozone not done in mds1 sec. 
       replay-vbr test_7g: @@@@@@ FAIL: Test 7g.3 failed 
      

            emoly.liu Emoly Liu
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: