LU-4442 mdt: check version for the child in mdt_reint_link

In mdt_reint_link(), do version check for the child before
calling mdt_object_exists(), so that if the child object does not
exist, the client can be evicted correctly.

Test-Parameters: testlist=replay-vbr envdefinitions=SLOW=yes,ONLY=7g
Signed-off-by: Emoly Liu <emoly.liu@intel.com>
Change-Id: I5bcb2c5e2f854750541fc8dbaa7c38a94c0cb342